patients list filter control alignment fix

--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -769,11 +769,15 @@ div.right-panel {
   .truenth-id-label {
     display: none;
   }
+  div.filterControl {
+    min-height: 2.5em;
+  }
   div.filterControl select,
   div.filterControl input
   {
     font-weight: normal;
-    min-height: @inputHeight;
+    min-height: 2.3em;
+    height: 2.3em;
     font-size: 0.99em;
   }
   th.status-field {
